@@ -1,6 +1,53 @@
 use alienfile;
+use File::Which qw( which );
+use Capture::Tiny qw( capture );
+use Sort::Versions qw( versioncmp );
+use List::Util qw( all );
 
-probe sub { 'share' };
+configure {
+  requires 'File::Which';
+  requires 'Capture::Tiny';
+  requires 'Sort::Versions';
+};
+
+probe sub {
+  my($build) = @_;
+
+  my %tools;
+  
+  foreach my $tool (qw( autoconf autoheader autom4te autoreconf autoscan autoupdate ifnames ))
+  {
+    $tools{$tool} = 0;
+    my $exe = which $tool;
+    if($exe)
+    {
+      my(undef, undef, $stdout) = capture {
+        `$tool --version`;
+      };
+      
+      if($stdout =~ /GNU Autoconf/ && $stdout =~ /([0-9\.]+)$/)
+      {
+        my $version = $1;
+        if(versioncmp($version, '2.69') >= 0)
+        {
+          $tools{$tool} = $version;
+        }
+      }
+    }
+  }
+
+  if(all { $_ != 0 } values %tools)
+  {
+    my($version) = values %tools;
+    if(all { $_ == $version } values %tools)
+    {
+      $build->install_prop->{my_version} = $version;
+      return 'system';
+    }
+  }
+
+  'share';
+};
 
 share {
   requires 'Alien::m4'   => '0.11';
@@ -96,4 +143,13 @@ share {
       }
     },
   );
+};
+
+sys {
+
+  gather sub {
+    my($build) = @_;
+    $build->runtime_prop->{version} = $build->install_prop->{my_version};
+  };
+
 };
